--- a/assets/src/web-stories-block/css/lightbox.css
+++ b/assets/src/web-stories-block/css/lightbox.css
@@ -8,6 +8,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  opacity: 0;
 }
 
 .admin-bar .web-stories-list__lightbox {
@@ -16,7 +17,8 @@
 
 .web-stories-list__lightbox.show {
   left: 0;
-  z-index: 999;
+  z-index: 9999;
+  opacity: 1;
 }
 
 .web-stories-list__lightbox amp-story-player {
