--- a/assets/src/web-stories-block/css/variables.css
+++ b/assets/src/web-stories-block/css/variables.css
@@ -11,5 +11,4 @@
   --ws-story-max-width: 285px;
   --ws-circle-size: 96px;
   --ws-circle-border-color: #ccc;
-  --ws-container-max-width: 1440px;
 }
