--- a/assets/src/web-stories-block/css/views/circles.css
+++ b/assets/src/web-stories-block/css/views/circles.css
@@ -1,15 +1,18 @@
 /* Web Stories: Circles View */
-.web-stories-list {
-  max-width: var(
-    --ws-container-max-width
-  ); /* Limit the width so that the nav arrows don't stick to the edges of the viewport. */
-  margin: 0 auto;
-}
-
 .web-stories-list.is-carousel .web-stories-list__carousel {
   display: flex;
   overflow-y: hidden;
 }
+
+body > .web-stories-list.is-view-type-circles {
+  border-bottom: 1px solid #ccc;
+  padding: 12px 0;
+}
+
+.web-stories-list.is-view-type-circles .amp-carousel-slide {
+  vertical-align: top;
+}
+
 .web-stories-list.is-view-type-circles .glider-track {
   justify-content: center;
   margin: 0 auto;
@@ -37,6 +40,11 @@
 .web-stories-list.is-view-type-circles .web-stories-list__story-poster::after,
 .web-stories-list.is-view-type-circles .web-stories-list__story-poster::before {
   display: none;
+}
+
+.web-stories-list.is-view-type-circles
+  .web-stories-list__story-content-overlay {
+  padding-bottom: 0;
 }
 
 .web-stories-list.is-view-type-circles .story-content-overlay__title {
